# inboxium

./: LICENSE  README.md  pyproject.toml
src/inboxium/: __init__.py  inboxium.py  main.py  types.py
